Adicionando handler de login de usuários e testes e2e
