# auth-service/internal/router/usuario_router.go
@@ -13,5 +13,11 @@ func getUsuarioRoutes() []Route {
 			HandlerFunc: handler.HandleCadastrarUsuario,
 			HasAuth:     false,
 		},
+		{
+			Path: "/login",
+			Method:      "POST",
+			HandlerFunc: handler.HandleLoginUsuario,
+			HasAuth:     false,
+		},
 	}
 }
